Added final analysis figure code

--- a/census_processing/olivia_census_2.ipynb
+++ b/census_processing/olivia_census_2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,6 +463,46 @@
     "# #df_b[['ab_HD01_VD01', 'rb_HD01_VD01','total_pop', 'r_HD01_VD01','total_occ_homes']] -> these three are repeats\n",
     "df_t.drop(columns=DROP, inplace=True, errors='ignore')\n",
     "df_t.rename(columns=RENAME, inplace=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(352, 273)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_t.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(560, 101)"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_b.shape"
    ]
   },
   {
