--- a/Analysis/gas_housingproj_table.ipynb
+++ b/Analysis/gas_housingproj_table.ipynb
@@ -1400,9 +1400,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:cds_env] *",
+   "display_name": "cds_env",
    "language": "python",
-   "name": "conda-env-cds_env-py"
+   "name": "cds_env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1414,7 +1414,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
