--- a/preprocessing/utilities_merge_may.ipynb
+++ b/preprocessing/utilities_merge_may.ipynb
@@ -522,9 +522,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:cds] *",
+   "display_name": "cds_env",
    "language": "python",
-   "name": "conda-env-cds-py"
+   "name": "cds_env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -536,7 +536,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
