--- a/preprocessing/update_addr_check.ipynb
+++ b/preprocessing/update_addr_check.ipynb
@@ -2279,9 +2279,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:cds] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-cds-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -2293,7 +2293,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
