added read me for some analysis files

--- a/census_processing/process_census.ipynb
+++ b/census_processing/process_census.ipynb
@@ -7,7 +7,7 @@
     "# Process census data\n",
     "Formerly olivia_census_2.ipynb <br>\n",
     "This file reads in yearly ACS reports from the Census folder in the dropbox <br>\n",
-    "R"
+    "Results in two final comprehensive csvs in time series format - one for tract and one for blockgroup"
    ]
   },
   {
