--- a/preprocessing/housing/housing_data_read.ipynb
+++ b/preprocessing/housing/housing_data_read.ipynb
@@ -24,6 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#path = /Dropbox (GaTech)/CDS-2019-AlbanyHub/Raw-Data/All CED Funded Projects 2007-2017.xlsx\n",
     "xlsx = pd.ExcelFile('All CED Funded Projects 2007-2017.xlsx')\n",
     "df1 = pd.read_excel(xlsx, 'HOME Funded Projects')\n",
     "df2 = pd.read_excel(xlsx, 'CDBG Funded Projects')"
@@ -807,9 +808,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:cds] *",
+   "display_name": "cds_env",
    "language": "python",
-   "name": "conda-env-cds-py"
+   "name": "cds_env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -821,7 +822,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
