--- a/preprocessing/housing/housing_data_read_v02.ipynb
+++ b/preprocessing/housing/housing_data_read_v02.ipynb
@@ -6104,9 +6104,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:cds] *",
+   "display_name": "cds_env",
    "language": "python",
-   "name": "conda-env-cds-py"
+   "name": "cds_env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -6118,7 +6118,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
