--- a/Analysis/Random_Sample.ipynb
+++ b/Analysis/Random_Sample.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Random_Sample\n",
+    "Grabs a random sample of SAMPLE_SIZE addresses from a list of utility bills"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,17 +20,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df1 = pd.read_csv('~/Dropbox (GaTech)/CDS-2019-AlbanyHub/subsets of utilities/utilities_sqft_nonproj.csv')\n",
-    "\n"
+    "#The CSV to sample from\n",
+    "df1 = pd.read_csv('~/Dropbox (GaTech)/CDS-2019-AlbanyHub/subsets of utilities/utilities_sqft_nonproj.csv')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -31,51 +39,52 @@
        "(2011559, 11)"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "addresses = df1['AddressID'].unique()\n",
-    "df1.shape"
+    "addresses = df1['AddressID'].unique() #all unique addresses in the csv\n",
+    "SAMPLE_SIZE = 100 #Number of addresses to take\n",
+    "\n",
+    "df1.shape #Count of total records"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "SAMPLE_SIZE = 100\n",
-    "np.random.shuffle(addresses)\n",
-    "final = addresses[1:SAMPLE_SIZE]\n",
-    "df_sub = df1[df1['AddressID'].isin(final)]"
+    "np.random.shuffle(addresses) #Randomize\n",
+    "final = addresses[0:SAMPLE_SIZE]#Sample\n",
+    "df_sub = df1[df1['AddressID'].isin(final)] #Get all records whose address is in the sample"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(11386, 11)"
+       "(12287, 11)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_sub.shape"
+    "df_sub.shape #Count of sample records"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
