--- a/preprocessing/database/db_updatecensus.ipynb
+++ b/preprocessing/database/db_updatecensus.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -9976,6 +9976,238 @@
    "source": [
     "df_block.to_csv(path+'CensusBlock_v02.csv', index=False)\n",
     "df_tract.to_csv(path+'CensusTract_v02.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_block = pd.read_csv(path+'CensusBlock_v02.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>GEO.id</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>GEO.id2</th>\n",
+       "      <th>Tract</th>\n",
+       "      <th>BlockGroup</th>\n",
+       "      <th>County</th>\n",
+       "      <th>TotalMale</th>\n",
+       "      <th>MaleUnder5</th>\n",
+       "      <th>Male5To9</th>\n",
+       "      <th>Male10To14</th>\n",
+       "      <th>...</th>\n",
+       "      <th>HispanicPacificIslander</th>\n",
+       "      <th>HispanicOtherRace</th>\n",
+       "      <th>Hispanic2Plus</th>\n",
+       "      <th>Hispanic2PlusIncOther</th>\n",
+       "      <th>Hispanic2PlusExcOther</th>\n",
+       "      <th>TotalHomes</th>\n",
+       "      <th>TotalOccupiedHomes</th>\n",
+       "      <th>TotalVacantHomes</th>\n",
+       "      <th>TotalOwnedHomes</th>\n",
+       "      <th>TotalRentedHomes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1500000US130950001001</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>130950001001</td>\n",
+       "      <td>100</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Dougherty County</td>\n",
+       "      <td>807</td>\n",
+       "      <td>58</td>\n",
+       "      <td>75</td>\n",
+       "      <td>176</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>512</td>\n",
+       "      <td>512</td>\n",
+       "      <td>0</td>\n",
+       "      <td>357</td>\n",
+       "      <td>155</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1500000US130950001002</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>130950001002</td>\n",
+       "      <td>100</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Dougherty County</td>\n",
+       "      <td>232</td>\n",
+       "      <td>0</td>\n",
+       "      <td>30</td>\n",
+       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>114</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>256</td>\n",
+       "      <td>194</td>\n",
+       "      <td>62</td>\n",
+       "      <td>93</td>\n",
+       "      <td>101</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1500000US130950001003</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>130950001003</td>\n",
+       "      <td>100</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Dougherty County</td>\n",
+       "      <td>375</td>\n",
+       "      <td>67</td>\n",
+       "      <td>166</td>\n",
+       "      <td>8</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>668</td>\n",
+       "      <td>504</td>\n",
+       "      <td>164</td>\n",
+       "      <td>73</td>\n",
+       "      <td>431</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1500000US130950001004</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>130950001004</td>\n",
+       "      <td>100</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Dougherty County</td>\n",
+       "      <td>642</td>\n",
+       "      <td>41</td>\n",
+       "      <td>79</td>\n",
+       "      <td>43</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>737</td>\n",
+       "      <td>635</td>\n",
+       "      <td>102</td>\n",
+       "      <td>121</td>\n",
+       "      <td>514</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1500000US130950001005</td>\n",
+       "      <td>2013</td>\n",
+       "      <td>130950001005</td>\n",
+       "      <td>100</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Dougherty County</td>\n",
+       "      <td>207</td>\n",
+       "      <td>0</td>\n",
+       "      <td>19</td>\n",
+       "      <td>19</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>11</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>336</td>\n",
+       "      <td>263</td>\n",
+       "      <td>73</td>\n",
+       "      <td>121</td>\n",
+       "      <td>142</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 103 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                  GEO.id  Year       GEO.id2  Tract  BlockGroup  \\\n",
+       "0  1500000US130950001001  2013  130950001001    100           1   \n",
+       "1  1500000US130950001002  2013  130950001002    100           2   \n",
+       "2  1500000US130950001003  2013  130950001003    100           3   \n",
+       "3  1500000US130950001004  2013  130950001004    100           4   \n",
+       "4  1500000US130950001005  2013  130950001005    100           5   \n",
+       "\n",
+       "             County  TotalMale  MaleUnder5  Male5To9  Male10To14  ...  \\\n",
+       "0  Dougherty County        807          58        75         176  ...   \n",
+       "1  Dougherty County        232           0        30           0  ...   \n",
+       "2  Dougherty County        375          67       166           8  ...   \n",
+       "3  Dougherty County        642          41        79          43  ...   \n",
+       "4  Dougherty County        207           0        19          19  ...   \n",
+       "\n",
+       "   HispanicPacificIslander  HispanicOtherRace  Hispanic2Plus  \\\n",
+       "0                        0                  0              0   \n",
+       "1                        0                114              0   \n",
+       "2                        0                  0              0   \n",
+       "3                        0                  5              0   \n",
+       "4                        0                 11              0   \n",
+       "\n",
+       "   Hispanic2PlusIncOther  Hispanic2PlusExcOther  TotalHomes  \\\n",
+       "0                      0                      0         512   \n",
+       "1                      0                      0         256   \n",
+       "2                      0                      0         668   \n",
+       "3                      0                      0         737   \n",
+       "4                      0                      0         336   \n",
+       "\n",
+       "   TotalOccupiedHomes  TotalVacantHomes  TotalOwnedHomes  TotalRentedHomes  \n",
+       "0                 512                 0              357               155  \n",
+       "1                 194                62               93               101  \n",
+       "2                 504               164               73               431  \n",
+       "3                 635               102              121               514  \n",
+       "4                 263                73              121               142  \n",
+       "\n",
+       "[5 rows x 103 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_block.head()"
    ]
   },
   {
