--- a/preprocessing/database/db_relinking.ipynb
+++ b/preprocessing/database/db_relinking.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -188,7 +188,7 @@
        "4          1           500"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,7 +199,249 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df_bg' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-17-8b81e30269f5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mdf_bg\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mdf_bg\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'BlockGroupID'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m==\u001b[0m\u001b[0;36m56\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'df_bg' is not defined"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>BlockGroupID</th>\n",
+       "      <th>BlockGroupCombo</th>\n",
+       "      <th>GEO.id</th>\n",
+       "      <th>Year</th>\n",
+       "      <th>GEO.id2</th>\n",
+       "      <th>Tract</th>\n",
+       "      <th>BlockGroup</th>\n",
+       "      <th>County</th>\n",
+       "      <th>TotalMale</th>\n",
+       "      <th>MaleUnder5</th>\n",
+       "      <th>...</th>\n",
+       "      <th>HispanicPacificIslander</th>\n",
+       "      <th>HispanicOtherRace</th>\n",
+       "      <th>Hispanic2Plus</th>\n",
+       "      <th>Hispanic2PlusIncOther</th>\n",
+       "      <th>Hispanic2PlusExcOther</th>\n",
+       "      <th>TotalHomes</th>\n",
+       "      <th>TotalOccupiedHomes</th>\n",
+       "      <th>TotalVacantHomes</th>\n",
+       "      <th>TotalOwnedHomes</th>\n",
+       "      <th>TotalRentedHomes</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1_100</td>\n",
+       "      <td>1500000US130950001001</td>\n",
+       "      <td>2013.0</td>\n",
+       "      <td>1.309500e+11</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Dougherty County</td>\n",
+       "      <td>807.0</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>512.0</td>\n",
+       "      <td>512.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>357.0</td>\n",
+       "      <td>155.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2_100</td>\n",
+       "      <td>1500000US130950001002</td>\n",
+       "      <td>2013.0</td>\n",
+       "      <td>1.309500e+11</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>Dougherty County</td>\n",
+       "      <td>232.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>114.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>256.0</td>\n",
+       "      <td>194.0</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>93.0</td>\n",
+       "      <td>101.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3_100</td>\n",
+       "      <td>1500000US130950001003</td>\n",
+       "      <td>2013.0</td>\n",
+       "      <td>1.309500e+11</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Dougherty County</td>\n",
+       "      <td>375.0</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>668.0</td>\n",
+       "      <td>504.0</td>\n",
+       "      <td>164.0</td>\n",
+       "      <td>73.0</td>\n",
+       "      <td>431.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>4_100</td>\n",
+       "      <td>1500000US130950001004</td>\n",
+       "      <td>2013.0</td>\n",
+       "      <td>1.309500e+11</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Dougherty County</td>\n",
+       "      <td>642.0</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>737.0</td>\n",
+       "      <td>635.0</td>\n",
+       "      <td>102.0</td>\n",
+       "      <td>121.0</td>\n",
+       "      <td>514.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>5_100</td>\n",
+       "      <td>1500000US130950001005</td>\n",
+       "      <td>2013.0</td>\n",
+       "      <td>1.309500e+11</td>\n",
+       "      <td>100.0</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Dougherty County</td>\n",
+       "      <td>207.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>11.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>336.0</td>\n",
+       "      <td>263.0</td>\n",
+       "      <td>73.0</td>\n",
+       "      <td>121.0</td>\n",
+       "      <td>142.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 105 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   BlockGroupID BlockGroupCombo                 GEO.id    Year       GEO.id2  \\\n",
+       "0             1           1_100  1500000US130950001001  2013.0  1.309500e+11   \n",
+       "1             2           2_100  1500000US130950001002  2013.0  1.309500e+11   \n",
+       "2             3           3_100  1500000US130950001003  2013.0  1.309500e+11   \n",
+       "3             4           4_100  1500000US130950001004  2013.0  1.309500e+11   \n",
+       "4             5           5_100  1500000US130950001005  2013.0  1.309500e+11   \n",
+       "\n",
+       "   Tract BlockGroup            County  TotalMale  MaleUnder5  ...  \\\n",
+       "0  100.0          1  Dougherty County      807.0        58.0  ...   \n",
+       "1  100.0          2  Dougherty County      232.0         0.0  ...   \n",
+       "2  100.0          3  Dougherty County      375.0        67.0  ...   \n",
+       "3  100.0          4  Dougherty County      642.0        41.0  ...   \n",
+       "4  100.0          5  Dougherty County      207.0         0.0  ...   \n",
+       "\n",
+       "   HispanicPacificIslander  HispanicOtherRace  Hispanic2Plus  \\\n",
+       "0                      0.0                0.0            0.0   \n",
+       "1                      0.0              114.0            0.0   \n",
+       "2                      0.0                0.0            0.0   \n",
+       "3                      0.0                5.0            0.0   \n",
+       "4                      0.0               11.0            0.0   \n",
+       "\n",
+       "   Hispanic2PlusIncOther  Hispanic2PlusExcOther  TotalHomes  \\\n",
+       "0                    0.0                    0.0       512.0   \n",
+       "1                    0.0                    0.0       256.0   \n",
+       "2                    0.0                    0.0       668.0   \n",
+       "3                    0.0                    0.0       737.0   \n",
+       "4                    0.0                    0.0       336.0   \n",
+       "\n",
+       "   TotalOccupiedHomes  TotalVacantHomes  TotalOwnedHomes  TotalRentedHomes  \n",
+       "0               512.0               0.0            357.0             155.0  \n",
+       "1               194.0              62.0             93.0             101.0  \n",
+       "2               504.0             164.0             73.0             431.0  \n",
+       "3               635.0             102.0            121.0             514.0  \n",
+       "4               263.0              73.0            121.0             142.0  \n",
+       "\n",
+       "[5 rows x 105 columns]"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_blockgroup.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +667,7 @@
        "[5 rows x 274 columns]"
       ]
      },
-     "execution_count": 75,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -436,7 +678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -648,7 +890,7 @@
        "[5 rows x 105 columns]"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1511,12 +1753,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df"
-   ]
+   "source": []
   }
  ],
  "metadata": {
