--- a/preprocessing/utility/utilities_step1.ipynb
+++ b/preprocessing/utility/utilities_step1.ipynb
@@ -15,19 +15,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
-    "IN_PATH = '/home/mirabel/Dropbox (GaTech)/CDS-2019-AlbanyHub/Raw-Data/Reformatted/'\n",
-    "OUT_PATH = '/home/mirabel/Dropbox (GaTech)/CDS-2019-AlbanyHub/Raw-Data/ReformattedYears/'"
+    "IN_PATH = '/home/mirabel/Dropbox (GaTech)/CDS-2019-AlbanyHub/Raw-Data/UtilitiesReformatted/'\n",
+    "OUT_PATH = '/home/mirabel/Dropbox (GaTech)/CDS-2019-AlbanyHub/Test-Replication/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
     "    for i in range(1, len(year_list)):\n",
     "        df = pd.concat([df, year_list[i]], ignore_index=True)\n",
     "        print(months[i])\n",
-    "    path = out_path+str(year)+'.csv'\n",
+    "    path = out_path+'Totals'+str(year)+'.csv'\n",
     "    df.to_csv(path, index=False)"
    ]
   },
@@ -85,54 +85,168 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jan\n",
+      "Feb\n",
+      "Mar\n",
+      "Apr\n",
+      "May\n",
+      "Jun\n",
+      "Jul\n",
+      "Aug\n",
+      "Sep\n",
+      "Oct\n",
+      "Nov\n",
+      "Dec\n"
+     ]
+    }
+   ],
    "source": [
     "df2012 = readexcel(\"2012\", IN_PATH)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jan\n",
+      "Feb\n",
+      "Mar\n",
+      "Apr\n",
+      "May\n",
+      "Jun\n",
+      "Jul\n",
+      "Aug\n",
+      "Sep\n",
+      "Oct\n",
+      "Nov\n",
+      "Dec\n"
+     ]
+    }
+   ],
    "source": [
     "df2013 = readexcel(\"2013\", IN_PATH)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jan\n",
+      "Feb\n",
+      "Mar\n",
+      "Apr\n",
+      "May\n",
+      "Jun\n",
+      "Jul\n",
+      "Aug\n",
+      "Sep\n",
+      "Oct\n",
+      "Nov\n",
+      "Dec\n"
+     ]
+    }
+   ],
    "source": [
     "df2014 = readexcel(\"2014\", IN_PATH)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jan\n",
+      "Feb\n",
+      "Mar\n",
+      "Apr\n",
+      "May\n",
+      "Jun\n",
+      "Jul\n",
+      "Aug\n",
+      "Sep\n",
+      "Oct\n",
+      "Nov\n",
+      "Dec\n"
+     ]
+    }
+   ],
    "source": [
     "df2015 = readexcel(\"2015\", IN_PATH)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jan\n",
+      "Feb\n",
+      "Mar\n",
+      "Apr\n",
+      "May\n",
+      "Jun\n",
+      "Jul\n",
+      "Aug\n",
+      "Sep\n",
+      "Oct\n",
+      "Nov\n",
+      "Dec\n"
+     ]
+    }
+   ],
    "source": [
     "df2016 = readexcel(\"2016\", IN_PATH)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Jan\n",
+      "Feb\n",
+      "Mar\n",
+      "Apr\n",
+      "May\n",
+      "Jun\n",
+      "Jul\n",
+      "Aug\n",
+      "Sep\n",
+      "Oct\n",
+      "Nov\n",
+      "Dec\n"
+     ]
+    }
+   ],
    "source": [
     "df2017 = readexcel(\"2017\", IN_PATH)"
    ]
@@ -156,37 +270,116 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
+   "source": [
+    "Write (Optional)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Feb\n",
+      "Mar\n",
+      "Apr\n",
+      "May\n",
+      "Jun\n",
+      "Jul\n",
+      "Aug\n",
+      "Sep\n",
+      "Oct\n",
+      "Nov\n",
+      "Dec\n"
+     ]
+    }
+   ],
    "source": [
     "writedf(df2012, 2012, OUT_PATH)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Feb\n",
+      "Mar\n",
+      "Apr\n",
+      "May\n",
+      "Jun\n",
+      "Jul\n",
+      "Aug\n",
+      "Sep\n",
+      "Oct\n",
+      "Nov\n",
+      "Dec\n"
+     ]
+    }
+   ],
    "source": [
     "writedf(df2013, 2013, OUT_PATH)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Feb\n",
+      "Mar\n",
+      "Apr\n",
+      "May\n",
+      "Jun\n",
+      "Jul\n",
+      "Aug\n",
+      "Sep\n",
+      "Oct\n",
+      "Nov\n",
+      "Dec\n"
+     ]
+    }
+   ],
    "source": [
     "writedf(df2014, 2014, OUT_PATH)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Feb\n",
+      "Mar\n",
+      "Apr\n",
+      "May\n",
+      "Jun\n",
+      "Jul\n",
+      "Aug\n",
+      "Sep\n",
+      "Oct\n",
+      "Nov\n",
+      "Dec\n"
+     ]
+    }
+   ],
    "source": [
     "writedf(df2015, 2015, OUT_PATH)"
    ]
@@ -236,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +465,8 @@
     "df = pd.read_csv(path + \"Totals2012.csv\")\n",
     "for year in years:\n",
     "    df_test = pd.read_csv(path+ \"Totals\" + year + \".csv\")\n",
-    "    df = pd.concat([df, df_test], ignore_index=True)"
+    "    df = pd.concat([df, df_test], ignore_index=True)\n",
+    "    "
    ]
   },
   {
