--- a/preprocessing/housing/housing_data_read.ipynb
+++ b/preprocessing/housing/housing_data_read.ipynb
@@ -2,32 +2,246 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import pandas as pd\n",
-    "import matplotlib as mpl\n",
-    "import matplotlib.pyplot as plt\n",
-    "import scipy as scp\n",
-    "from scipy import stats\n",
-    "import statsmodels.api as sm\n",
-    "import statsmodels.formula.api as smf\n",
-    "import sklearn\n",
-    "from sklearn.linear_model import LinearRegression"
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "infile = '~/Dropbox (GaTech)/CDS-2019-AlbanyHub/Raw-Data/Housing/All CED Funded Projects 2007-2017.xlsx'\n",
+    "xlsx = pd.ExcelFile(infile)\n",
+    "df1 = pd.read_excel(xlsx, 'HOME Funded Projects')\n",
+    "df2 = pd.read_excel(xlsx, 'CDBG Funded Projects')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Parcel ID</th>\n",
+       "      <th>Address</th>\n",
+       "      <th>City</th>\n",
+       "      <th>State</th>\n",
+       "      <th>XY Coordinates</th>\n",
+       "      <th>Plan Year</th>\n",
+       "      <th>IDIS Project</th>\n",
+       "      <th>Project</th>\n",
+       "      <th>IDIS Activity ID</th>\n",
+       "      <th>Activity Status</th>\n",
+       "      <th>Program</th>\n",
+       "      <th>Funded Amount</th>\n",
+       "      <th>Draw Amount</th>\n",
+       "      <th>Balance</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0000Q/00025/009</td>\n",
+       "      <td>1707 Edgerly Avenue</td>\n",
+       "      <td>Albany</td>\n",
+       "      <td>GA</td>\n",
+       "      <td>31.5735022, -84.191293</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Homeowner Rehabilitation</td>\n",
+       "      <td>618</td>\n",
+       "      <td>Completed</td>\n",
+       "      <td>HOME</td>\n",
+       "      <td>27033.46</td>\n",
+       "      <td>27033.46</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0000U/00006/002</td>\n",
+       "      <td>703 Dartmouth</td>\n",
+       "      <td>Albany</td>\n",
+       "      <td>GA</td>\n",
+       "      <td>31.5882777, -84.1367938</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Homeowner Rehabilitation</td>\n",
+       "      <td>634</td>\n",
+       "      <td>Completed</td>\n",
+       "      <td>HOME</td>\n",
+       "      <td>30185.60</td>\n",
+       "      <td>30185.60</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0000H/00047/005</td>\n",
+       "      <td>1115 W. Waddell Avenue</td>\n",
+       "      <td>Albany</td>\n",
+       "      <td>GA</td>\n",
+       "      <td>31.5669637, -84.1782082</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Homeowner Rehabilitation</td>\n",
+       "      <td>610</td>\n",
+       "      <td>Completed</td>\n",
+       "      <td>HOME</td>\n",
+       "      <td>28678.19</td>\n",
+       "      <td>28678.19</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0000X/00003/034</td>\n",
+       "      <td>313 Forrestal</td>\n",
+       "      <td>Albany</td>\n",
+       "      <td>GA</td>\n",
+       "      <td>31.5785109, -84.0824103</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Homeowner Rehabilitation</td>\n",
+       "      <td>633</td>\n",
+       "      <td>Completed</td>\n",
+       "      <td>HOME</td>\n",
+       "      <td>34694.47</td>\n",
+       "      <td>34694.47</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>00240/00003/024</td>\n",
+       "      <td>1125 Joel Drive</td>\n",
+       "      <td>Albany</td>\n",
+       "      <td>GA</td>\n",
+       "      <td>31.5611455, -84.2078905</td>\n",
+       "      <td>2007</td>\n",
+       "      <td>6</td>\n",
+       "      <td>Homeowner Rehabilitation</td>\n",
+       "      <td>600</td>\n",
+       "      <td>Completed</td>\n",
+       "      <td>HOME</td>\n",
+       "      <td>30756.96</td>\n",
+       "      <td>30756.96</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Parcel ID                 Address    City State  \\\n",
+       "0  0000Q/00025/009     1707 Edgerly Avenue  Albany    GA   \n",
+       "1  0000U/00006/002           703 Dartmouth  Albany    GA   \n",
+       "2  0000H/00047/005  1115 W. Waddell Avenue  Albany    GA   \n",
+       "3  0000X/00003/034           313 Forrestal  Albany    GA   \n",
+       "4  00240/00003/024         1125 Joel Drive  Albany    GA   \n",
+       "\n",
+       "            XY Coordinates  Plan Year  IDIS Project                   Project  \\\n",
+       "0   31.5735022, -84.191293       2007             6  Homeowner Rehabilitation   \n",
+       "1  31.5882777, -84.1367938       2007             6  Homeowner Rehabilitation   \n",
+       "2  31.5669637, -84.1782082       2007             6  Homeowner Rehabilitation   \n",
+       "3  31.5785109, -84.0824103       2007             6  Homeowner Rehabilitation   \n",
+       "4  31.5611455, -84.2078905       2007             6  Homeowner Rehabilitation   \n",
+       "\n",
+       "   IDIS Activity ID Activity Status Program  Funded Amount  Draw Amount  \\\n",
+       "0               618       Completed    HOME       27033.46     27033.46   \n",
+       "1               634       Completed    HOME       30185.60     30185.60   \n",
+       "2               610       Completed    HOME       28678.19     28678.19   \n",
+       "3               633       Completed    HOME       34694.47     34694.47   \n",
+       "4               600       Completed    HOME       30756.96     30756.96   \n",
+       "\n",
+       "   Balance  \n",
+       "0      0.0  \n",
+       "1      0.0  \n",
+       "2      0.0  \n",
+       "3      0.0  \n",
+       "4      0.0  "
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.concat([df1, df2])\n",
+    "df.index = range(len(df))\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1.to_csv('HOME_Funded_Projects.csv', index = False)\n",
+    "df2.to_csv('CDBG_Funded_Projects.csv', index = False)\n",
+    "df.to_csv('Total_Funded_Projects.csv', index = False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Check"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df1 = pd.read_csv('HOME_Funded_Projects.csv')\n",
+    "df2 = pd.read_csv('CDBG_Funded_Projects.csv')\n",
+    "df = pd.read_csv('Total_Funded_Projects.csv')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(286, 14)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#path = /Dropbox (GaTech)/CDS-2019-AlbanyHub/Raw-Data/All CED Funded Projects 2007-2017.xlsx\n",
-    "xlsx = pd.ExcelFile('All CED Funded Projects 2007-2017.xlsx')\n",
-    "df1 = pd.read_excel(xlsx, 'HOME Funded Projects')\n",
-    "df2 = pd.read_excel(xlsx, 'CDBG Funded Projects')"
+    "df1.shape"
    ]
   },
   {
@@ -198,234 +412,12 @@
     }
    ],
    "source": [
-    "df = pd.concat([df1, df2])\n",
-    "df.index = range(850)\n",
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df1.to_csv('HOME_Funded_Projects.csv', index = False)\n",
-    "df2.to_csv('CDBG_Funded_Projects.csv', index = False)\n",
-    "df.to_csv('Total_Funded_Projects.csv', index = False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Check"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df1 = pd.read_csv('HOME_Funded_Projects.csv')\n",
-    "df2 = pd.read_csv('CDBG_Funded_Projects.csv')\n",
-    "df = pd.read_csv('Total_Funded_Projects.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(286, 14)"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df1.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Parcel ID</th>\n",
-       "      <th>Address</th>\n",
-       "      <th>City</th>\n",
-       "      <th>State</th>\n",
-       "      <th>XY Coordinates</th>\n",
-       "      <th>Plan Year</th>\n",
-       "      <th>IDIS Project</th>\n",
-       "      <th>Project</th>\n",
-       "      <th>IDIS Activity ID</th>\n",
-       "      <th>Activity Status</th>\n",
-       "      <th>Program</th>\n",
-       "      <th>Funded Amount</th>\n",
-       "      <th>Draw Amount</th>\n",
-       "      <th>Balance</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0000Q/00025/009</td>\n",
-       "      <td>1707 Edgerly Avenue</td>\n",
-       "      <td>Albany</td>\n",
-       "      <td>GA</td>\n",
-       "      <td>31.5735022, -84.191293</td>\n",
-       "      <td>2007</td>\n",
-       "      <td>6</td>\n",
-       "      <td>Homeowner Rehabilitation</td>\n",
-       "      <td>618</td>\n",
-       "      <td>Completed</td>\n",
-       "      <td>HOME</td>\n",
-       "      <td>27033.46</td>\n",
-       "      <td>27033.46</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0000U/00006/002</td>\n",
-       "      <td>703 Dartmouth</td>\n",
-       "      <td>Albany</td>\n",
-       "      <td>GA</td>\n",
-       "      <td>31.5882777, -84.1367938</td>\n",
-       "      <td>2007</td>\n",
-       "      <td>6</td>\n",
-       "      <td>Homeowner Rehabilitation</td>\n",
-       "      <td>634</td>\n",
-       "      <td>Completed</td>\n",
-       "      <td>HOME</td>\n",
-       "      <td>30185.60</td>\n",
-       "      <td>30185.60</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0000H/00047/005</td>\n",
-       "      <td>1115 W. Waddell Avenue</td>\n",
-       "      <td>Albany</td>\n",
-       "      <td>GA</td>\n",
-       "      <td>31.5669637, -84.1782082</td>\n",
-       "      <td>2007</td>\n",
-       "      <td>6</td>\n",
-       "      <td>Homeowner Rehabilitation</td>\n",
-       "      <td>610</td>\n",
-       "      <td>Completed</td>\n",
-       "      <td>HOME</td>\n",
-       "      <td>28678.19</td>\n",
-       "      <td>28678.19</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>0000X/00003/034</td>\n",
-       "      <td>313 Forrestal</td>\n",
-       "      <td>Albany</td>\n",
-       "      <td>GA</td>\n",
-       "      <td>31.5785109, -84.0824103</td>\n",
-       "      <td>2007</td>\n",
-       "      <td>6</td>\n",
-       "      <td>Homeowner Rehabilitation</td>\n",
-       "      <td>633</td>\n",
-       "      <td>Completed</td>\n",
-       "      <td>HOME</td>\n",
-       "      <td>34694.47</td>\n",
-       "      <td>34694.47</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>00240/00003/024</td>\n",
-       "      <td>1125 Joel Drive</td>\n",
-       "      <td>Albany</td>\n",
-       "      <td>GA</td>\n",
-       "      <td>31.5611455, -84.2078905</td>\n",
-       "      <td>2007</td>\n",
-       "      <td>6</td>\n",
-       "      <td>Homeowner Rehabilitation</td>\n",
-       "      <td>600</td>\n",
-       "      <td>Completed</td>\n",
-       "      <td>HOME</td>\n",
-       "      <td>30756.96</td>\n",
-       "      <td>30756.96</td>\n",
-       "      <td>0.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         Parcel ID                 Address    City State  \\\n",
-       "0  0000Q/00025/009     1707 Edgerly Avenue  Albany    GA   \n",
-       "1  0000U/00006/002           703 Dartmouth  Albany    GA   \n",
-       "2  0000H/00047/005  1115 W. Waddell Avenue  Albany    GA   \n",
-       "3  0000X/00003/034           313 Forrestal  Albany    GA   \n",
-       "4  00240/00003/024         1125 Joel Drive  Albany    GA   \n",
-       "\n",
-       "            XY Coordinates  Plan Year  IDIS Project                   Project  \\\n",
-       "0   31.5735022, -84.191293       2007             6  Homeowner Rehabilitation   \n",
-       "1  31.5882777, -84.1367938       2007             6  Homeowner Rehabilitation   \n",
-       "2  31.5669637, -84.1782082       2007             6  Homeowner Rehabilitation   \n",
-       "3  31.5785109, -84.0824103       2007             6  Homeowner Rehabilitation   \n",
-       "4  31.5611455, -84.2078905       2007             6  Homeowner Rehabilitation   \n",
-       "\n",
-       "   IDIS Activity ID Activity Status Program  Funded Amount  Draw Amount  \\\n",
-       "0               618       Completed    HOME       27033.46     27033.46   \n",
-       "1               634       Completed    HOME       30185.60     30185.60   \n",
-       "2               610       Completed    HOME       28678.19     28678.19   \n",
-       "3               633       Completed    HOME       34694.47     34694.47   \n",
-       "4               600       Completed    HOME       30756.96     30756.96   \n",
-       "\n",
-       "   Balance  \n",
-       "0      0.0  \n",
-       "1      0.0  \n",
-       "2      0.0  \n",
-       "3      0.0  \n",
-       "4      0.0  "
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
     "df1.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -434,7 +426,7 @@
        "(564, 14)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -598,7 +590,7 @@
        "4        6934.40      6934.40      0.0  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -609,7 +601,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -618,7 +610,7 @@
        "(850, 14)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -629,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -789,7 +781,7 @@
        "4      0.0  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -797,13 +789,6 @@
    "source": [
     "df.head()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
