--- a/preprocessing/utility/data_exploration_Utility.ipynb
+++ b/preprocessing/utility/data_exploration_Utility.ipynb
@@ -748,9 +748,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "cds_env",
+   "display_name": "Python [conda env:cds] *",
    "language": "python",
-   "name": "cds_env"
+   "name": "conda-env-cds-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -762,7 +762,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
